[gd_scene load_steps=63 format=2]

[ext_resource path="res://Assets/heart_1.png" type="Texture" id=1]
[ext_resource path="res://src/Other/UI.gd" type="Script" id=2]
[ext_resource path="res://Assets/money_sing.png" type="Texture" id=3]
[ext_resource path="res://pcsenior.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Rope/rope_unfolded.png" type="Texture" id=5]
[ext_resource path="res://Assets/heart_broken.png" type="Texture" id=6]
[ext_resource path="res://Assets/Bomb/bomba.png" type="Texture" id=7]
[ext_resource path="res://Assets/heart_sign_1.png" type="Texture" id=8]
[ext_resource path="res://Assets/test.png" type="Texture" id=9]
[ext_resource path="res://Assets/test_1.png" type="Texture" id=10]
[ext_resource path="res://Assets/MainMenuStuff/item_sign.png" type="Texture" id=11]
[ext_resource path="res://src/Other/MobileControlls.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/MainMenuStuff/quit_button_1_hover.png" type="Texture" id=13]
[ext_resource path="res://Assets/MainMenuStuff/help_button_1_hover.png" type="Texture" id=14]
[ext_resource path="res://Assets/GameOver/game_over_animation5.png" type="Texture" id=15]
[ext_resource path="res://Assets/GameOver/game_over_animation2.png" type="Texture" id=16]
[ext_resource path="res://Assets/GameOver/game_over_animation9.png" type="Texture" id=17]
[ext_resource path="res://Assets/GameOver/game_over_animation6.png" type="Texture" id=18]
[ext_resource path="res://Assets/GameOver/game_over_animation1.png" type="Texture" id=19]
[ext_resource path="res://Assets/GameOver/game_over_animation7.png" type="Texture" id=20]
[ext_resource path="res://Assets/GameOver/reset_hover.png" type="Texture" id=21]
[ext_resource path="res://Assets/GameOver/game_over_animation4.png" type="Texture" id=22]
[ext_resource path="res://Assets/GameOver/game_over_animation8.png" type="Texture" id=23]
[ext_resource path="res://Assets/GameOver/game_over_animation3.png" type="Texture" id=24]
[ext_resource path="res://Assets/Hats/mole_hat_10.png" type="Texture" id=25]
[ext_resource path="res://Assets/Keys/key_green.png" type="Texture" id=26]
[ext_resource path="res://Assets/Keys/key_white.png" type="Texture" id=27]
[ext_resource path="res://Assets/Keys/key_red.png" type="Texture" id=28]
[ext_resource path="res://Assets/Serpant/poison_icon.png" type="Texture" id=29]
[ext_resource path="res://Assets/HelpMenu/help_menu.png" type="Texture" id=30]
[ext_resource path="res://Assets/HelpMenu/next_page_button_hover.png" type="Texture" id=31]
[ext_resource path="res://Assets/HelpMenu/help_menu_1.png" type="Texture" id=32]
[ext_resource path="res://Assets/HelpMenu/help_menu_2.png" type="Texture" id=33]
[ext_resource path="res://Assets/back_button_v2_hover.png" type="Texture" id=34]
[ext_resource path="res://Assets/GameOver/spider_big_portrait.png" type="Texture" id=35]
[ext_resource path="res://Assets/GameOver/beholder_portrait.png" type="Texture" id=36]
[ext_resource path="res://Assets/Mole/mole_icon.png" type="Texture" id=37]
[ext_resource path="res://Assets/GameOver/serpant_portrait.png" type="Texture" id=38]
[ext_resource path="res://Assets/Beholder/boss_health_bar.png" type="Texture" id=39]
[ext_resource path="res://Music/Random/button_hover_1.wav" type="AudioStream" id=40]
[ext_resource path="res://Music/Random/game_over_1.wav" type="AudioStream" id=41]
[ext_resource path="res://src/Platforms/progressBar.tres" type="Theme" id=42]
[ext_resource path="res://Assets/MusicOnOff/music_button.png" type="Texture" id=43]
[ext_resource path="res://Assets/MainMenuStuff/quit_button_1.png" type="Texture" id=44]
[ext_resource path="res://Assets/GameOver/reset.png" type="Texture" id=45]
[ext_resource path="res://Assets/HelpMenu/back_button_v2_hover (1).png" type="Texture" id=46]
[ext_resource path="res://Assets/HelpMenu/next_page_button.png" type="Texture" id=47]
[ext_resource path="res://Assets/HelpMenu/back_button_v2.png" type="Texture" id=48]
[ext_resource path="res://Assets/MainMenuStuff/help_button_1.png" type="Texture" id=49]

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;

uniform vec4 color: hint_color;
uniform float multiplier = 0.7;
uniform float softness = 8.0;

void fragment()
{
	float value=distance(UV, vec2(0.5));
	COLOR = vec4(color.rgb, smoothstep(multiplier, softness, value));
}"

[sub_resource type="ShaderMaterial" id=12]
render_priority = -5
shader = SubResource( 11 )
shader_param/color = null
shader_param/multiplier = 0.15
shader_param/softness = 0.45

[sub_resource type="DynamicFont" id=1]
size = 25
outline_color = Color( 0.00392157, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 16 ), ExtResource( 24 ), ExtResource( 22 ), ExtResource( 15 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 17 ) ],
"loop": false,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.682353, 0.141176, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.00784314, 0, 0, 1 )

[sub_resource type="DynamicFont" id=13]
size = 30
font_data = ExtResource( 4 )

[node name="UI" type="Control"]
anchor_left = -0.183
anchor_top = -0.059
anchor_right = 0.121
anchor_bottom = 0.104
margin_left = 345.003
margin_top = 62.1308
margin_right = 1681.32
margin_bottom = 958.091
rect_scale = Vector2( 1.00572, 1.01026 )
script = ExtResource( 2 )

[node name="DarknessBoss" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.435294 )
material = SubResource( 12 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 41.0
color = Color( 0, 0, 0, 1 )

[node name="Darkness" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.435294 )
material = SubResource( 12 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 41.0
color = Color( 0, 0, 0, 1 )

[node name="Dim" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 61.0
margin_bottom = 21.0
color = Color( 0, 0, 0, 0.666667 )

[node name="Heart1" type="Sprite" parent="."]
position = Vector2( 219, 94 )
scale = Vector2( 8, 8 )
z_index = -2
texture = ExtResource( 1 )

[node name="health" type="Label" parent="."]
margin_left = 269.0
margin_top = 116.0
margin_right = 469.0
margin_bottom = 172.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )

[node name="MoneySing" type="Sprite" parent="."]
visible = false
position = Vector2( 1439, 90 )
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="money" type="Label" parent="."]
margin_left = 1669.0
margin_top = 220.0
margin_right = 1849.0
margin_bottom = 356.0
custom_fonts/font = SubResource( 2 )
align = 2

[node name="HeartSign1" type="Sprite" parent="."]
visible = false
position = Vector2( 79.9998, 132 )
scale = Vector2( 5, 5 )
texture = ExtResource( 8 )

[node name="LevelNumber" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -236.0
margin_top = 125.0
margin_right = -71.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 4 )
align = 2
autowrap = true

[node name="Ropes" type="Label" parent="."]
margin_left = 87.0
margin_top = 127.0
margin_right = 267.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 6 )

[node name="RopeUnfolded" type="Sprite" parent="."]
position = Vector2( 77, 110 )
scale = Vector2( 4, 4 )
z_index = -1
texture = ExtResource( 5 )

[node name="HeartBroken" type="Sprite" parent="."]
visible = false
position = Vector2( 219, 94 )
scale = Vector2( 8, 8 )
texture = ExtResource( 6 )

[node name="Bomba" type="Sprite" parent="."]
position = Vector2( 78, 200 )
scale = Vector2( 6, 6 )
texture = ExtResource( 7 )

[node name="bomb_n" type="Label" parent="."]
margin_left = 87.0
margin_top = 214.0
margin_right = 127.0
margin_bottom = 245.0
custom_fonts/font = SubResource( 7 )

[node name="time" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 19.9403
margin_right = 60.0
margin_bottom = 55.9403
custom_fonts/font = SubResource( 8 )
align = 1

[node name="Test" type="Sprite" parent="."]
position = Vector2( 1739, 138 )
scale = Vector2( 5, 5 )
z_index = -1
texture = ExtResource( 9 )

[node name="Test1" type="Sprite" parent="."]
visible = false
position = Vector2( 1716, 163 )
scale = Vector2( 5, 5 )
texture = ExtResource( 10 )

[node name="ItemSign" type="Sprite" parent="."]
position = Vector2( 42, 173 )
scale = Vector2( 5, 5 )
z_index = -2
texture = ExtResource( 11 )

[node name="CanvasLayer" parent="." instance=ExtResource( 12 )]

[node name="DialogBox" type="ColorRect" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 306.0
margin_right = 43.0
margin_bottom = 436.0
color = Color( 0, 0, 0, 0.470588 )

[node name="DialogText" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -613.0
margin_top = 356.0
margin_right = 622.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 9 )
text = "tekst"
align = 1
autowrap = true

[node name="Poison" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 92.0
margin_bottom = 111.0
color = Color( 0.0196078, 0.870588, 0.0352941, 0.0784314 )

[node name="SpiderBigPortrait" type="Sprite" parent="."]
visible = false
position = Vector2( 587, 525 )
scale = Vector2( 6.5, 6.5 )
z_index = 1
texture = ExtResource( 35 )

[node name="SerpantPortrait" type="Sprite" parent="."]
visible = false
position = Vector2( 587, 525 )
scale = Vector2( 6.5, 6.5 )
z_index = 1
texture = ExtResource( 38 )

[node name="GameOver" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 936, 440 )
scale = Vector2( 6.5, 6.5 )
frames = SubResource( 10 )
frame = 8
playing = true

[node name="ResetHover" type="Sprite" parent="."]
visible = false
position = Vector2( 936, 440 )
scale = Vector2( 6.5, 6.5 )
texture = ExtResource( 21 )

[node name="Help" type="Sprite" parent="."]
visible = false
position = Vector2( 936.2, 638.2 )
scale = Vector2( 6.5, 6.5 )
texture = ExtResource( 14 )

[node name="Quit" type="Sprite" parent="."]
visible = false
position = Vector2( 936.2, 800.7 )
scale = Vector2( 6.5, 6.5 )
texture = ExtResource( 13 )

[node name="HelpMenu" type="Sprite" parent="."]
visible = false
position = Vector2( 945, 448 )
scale = Vector2( 6.5, 6.5 )
texture = ExtResource( 30 )

[node name="Controls1" type="Sprite" parent="."]
visible = false
position = Vector2( 772.75, 549 )
scale = Vector2( 6.5, 6.5 )
texture = ExtResource( 32 )

[node name="Controls2" type="Sprite" parent="."]
visible = false
position = Vector2( 772.75, 549 )
scale = Vector2( 6.5, 6.5 )
texture = ExtResource( 33 )

[node name="ArrowLeft" type="Sprite" parent="."]
visible = false
position = Vector2( 1192, 695 )
scale = Vector2( 6.5, 6.5 )
texture = ExtResource( 31 )

[node name="ArrowRight" type="Sprite" parent="."]
visible = false
position = Vector2( 1374, 695 )
scale = Vector2( 6.5, 6.5 )
texture = ExtResource( 31 )
flip_h = true

[node name="Back" type="Sprite" parent="."]
visible = false
position = Vector2( 1283, 818.5 )
scale = Vector2( 6.5, 6.5 )
texture = ExtResource( 34 )

[node name="Time_whole" type="Label" parent="."]
visible = false
margin_left = 1158.0
margin_top = 552.0
margin_right = 1376.0
margin_bottom = 608.0
custom_colors/font_color = Color( 0.270588, 0.137255, 0.137255, 1 )
custom_fonts/font = SubResource( 1 )

[node name="Killed" type="Label" parent="."]
visible = false
margin_left = 455.0
margin_top = 596.0
margin_right = 726.0
margin_bottom = 826.0
custom_colors/font_color = Color( 0.270588, 0.137255, 0.137255, 1 )
custom_fonts/font = SubResource( 1 )
autowrap = true

[node name="LevelDead" type="Label" parent="."]
visible = false
margin_left = 1158.0
margin_top = 480.0
margin_right = 1383.0
margin_bottom = 536.0
custom_colors/font_color = Color( 0.270588, 0.137255, 0.137255, 1 )
custom_fonts/font = SubResource( 1 )

[node name="Portrait" type="Sprite" parent="."]
visible = false
position = Vector2( 585, 531 )
scale = Vector2( 6.5, 6.5 )
z_index = 2
texture = ExtResource( 36 )

[node name="Goggles" type="Sprite" parent="."]
visible = false
position = Vector2( 384, 94 )
scale = Vector2( 8, 8 )
texture = ExtResource( 25 )

[node name="KeyGreen" type="Sprite" parent="."]
visible = false
position = Vector2( 1296, 94 )
scale = Vector2( 7, 7 )
texture = ExtResource( 26 )

[node name="KeyRed" type="Sprite" parent="."]
visible = false
position = Vector2( 1408, 94 )
scale = Vector2( 7, 7 )
texture = ExtResource( 28 )

[node name="KeyWhite" type="Sprite" parent="."]
visible = false
position = Vector2( 1520, 94 )
scale = Vector2( 7, 7 )
texture = ExtResource( 27 )

[node name="Poison2" type="Sprite" parent="."]
visible = false
position = Vector2( 525, 94 )
scale = Vector2( 8, 8 )
texture = ExtResource( 29 )

[node name="MoleIcon" type="Sprite" parent="."]
visible = false
position = Vector2( 677.742, 75.912 )
scale = Vector2( 8, 8 )
texture = ExtResource( 37 )

[node name="HPbeholder" type="ProgressBar" parent="."]
visible = false
margin_left = 615.0
margin_top = 119.0
margin_right = 662.0
margin_bottom = 122.0
rect_scale = Vector2( 14.6352, 14.6509 )
theme = ExtResource( 42 )
custom_styles/fg = SubResource( 14 )
custom_styles/bg = SubResource( 15 )
max_value = 80.0
value = 80.0
percent_visible = false

[node name="BossHealthBar" type="Sprite" parent="."]
visible = false
position = Vector2( 962, 139 )
scale = Vector2( 5, 5 )
texture = ExtResource( 39 )

[node name="Boss_name" type="Label" parent="."]
visible = false
margin_left = 782.0
margin_top = 69.0
margin_right = 1142.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 13 )
text = "THE BEHOLDER"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 40 )
volume_db = -10.0

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 41 )
volume_db = -25.0

[node name="MusicButton" type="Sprite" parent="."]
visible = false
position = Vector2( 1832.37, 991.474 )
scale = Vector2( 6.5, 6.5 )
texture = ExtResource( 43 )

[node name="ResetButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 760.5, 323 )
scale = Vector2( 6.5, 6.5 )
z_index = 5
normal = ExtResource( 45 )
pressed = ExtResource( 21 )

[node name="HelpButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 760.5, 556.5 )
scale = Vector2( 6.5, 6.5 )
z_index = 1
normal = ExtResource( 49 )
pressed = ExtResource( 14 )

[node name="QuitButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 760.5, 719.5 )
scale = Vector2( 6.5, 6.5 )
z_index = 5
normal = ExtResource( 44 )
pressed = ExtResource( 13 )

[node name="BackButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 1107.5, 756.5 )
scale = Vector2( 6.5, 6.5 )
z_index = 1
normal = ExtResource( 48 )
pressed = ExtResource( 46 )

[node name="LeftButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 1107.5, 633 )
scale = Vector2( 6.5, 6.5 )
z_index = 1
normal = ExtResource( 47 )
pressed = ExtResource( 31 )

[node name="RightButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 1458.5, 633.305 )
scale = Vector2( -6.5, 6.5 )
z_index = 1
normal = ExtResource( 47 )
pressed = ExtResource( 31 )

[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_RightButton_pressed"]
